--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
@@ -18,7 +18,7 @@
    <div class="col-xs-12" style="margin-bottom: 20px;">
         &nbsp;
     </div>
-    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+    <table class="table table-striped table-bordered table-hover" id="dataTables-example" border="1">
         <thead>
             <tr>
                 <th class="text-center " style="vertical-align: middle" >Codigo</th>
