--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/notasAlumnosMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/notasAlumnosMateria.html.twig
@@ -7,7 +7,7 @@
     {%for count, parcial in arr_parcial %}
     <li><a data-toggle="tab" class="tabNotas"  id="ingreso{{count}}">Ingreso de Notas del {{parcial.parcial}}</a></li>
     {% endfor %}
-    <li><a data-toggle="tab" class="tabNotas"  id="ingreso2">Listar Alumnos</a></li>
+    {#<li><a data-toggle="tab" class="tabNotas"  id="ingreso2">Listar Alumnos</a></li>#}
   </ul>
 
   <!-- Tab panes -->
