--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/consultahorarios.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/consultahorarios.html.twig
@@ -12,8 +12,9 @@
 </script>
 
         
-        <section class="">
-          <div class="">
+      <section class="content">
+
+      <div class="page-content" style="height: 545px;">
              
             
             <div class="col-md-12">
