--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
@@ -57,12 +57,12 @@
                                <option value="2">Notificacion</option>
                                <option value="3">Evento</option>
                            </select>                        
-                           <select id="Curso" name="Curso">
+                           {#<select id="Curso" name="Curso">
                                <option value="0">-</option>
                                <option value="1">S3K</option>
                                <option value="2">S5K</option>
                                <option value="3">S5J</option>
-                           </select>
+                           </select>#}
                         {%endif%}
                         {% if app.session.get('descRol') == "UNIVERSIDAD" %}
                             <select id="TipoMensaje" name="TipoMensaje">
@@ -123,7 +123,7 @@
 					        <th style="text-align: center"> Asunto   </th>
 					        <th style="text-align: center"> Detalle </th>
 					        <th style="text-align: center">Fecha </th>
-                                                <th style="text-align: center">Ver</th>
+                                               {# <th style="text-align: center">Ver</th>#}
 				        </tr>
 				        </thead>
 				        <tbody>
@@ -133,7 +133,7 @@
                                 <td style="text-align: center">{{ facultad.asunto }}</td>
                                 <td style="text-align: center">{{ facultad.mensaje }}</td>
                                 <td style="text-align: center">{{ facultad.fecha_registro }}</td>
-                                 <td style="text-align: center">  <a href="{{ path('dayscript_Lectura') }}"id="Mensaje_1" name="Mensaje_1"><i class="fa fa-envelope-o"></i></a></td>
+                                 {#<td style="text-align: center">  <a href="{{ path('dayscript_Lectura') }}"id="Mensaje_1" name="Mensaje_1"><i class="fa fa-envelope-o"></i></a></td>#}
                             </tr>
                      {%endfor%}                              
                                                               
