--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
@@ -21,7 +21,7 @@
                                        
                               
 				        <div class="box-header with-border">
-                <h3 class="box-title">Notificaciones (Tienes # notificaciones nuevos)</h3>
+               {# <h3 class="box-title">Notificaciones (Tienes # notificaciones nuevos)</h3>#}
                
             </div><!-- /.box-header -->
            <div class="box box-solid">
@@ -35,7 +35,7 @@
 					        <th> Asunto   </th>
 					        <th> Detalle </th>
 					        <th>Fecha de Envio</th>
-                                                <th>Ver Mensajes</th>
+                                               {# <th>Ver Mensajes</th>#}
 				        </tr>
 				        </thead>
 				        <tbody>
@@ -47,8 +47,8 @@
                                     <td>{{ Mensajes.asunto }}</td>
                                     <td>{{ Mensajes.mensaje }}</td>
                                     <td style="text-align: center">{{ Mensajes.fecha_registro }}</td>
-                                    <td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
-                                    <i class="fa fa-envelope-o"></i></a>
+                                    {#<td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
+                                    <i class="fa fa-envelope-o"></i></a>#}
                                     </td>
                                 </tr>
                           {%endfor%}
