--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -103,7 +103,7 @@
                 <li><a href="#"><i class="fa fa-circle-o"></i> Subir Solicitudes </a></li>
               {% endif %}
               {% if event.id_sg_opcion == ConsultaHorariosClases %}
-                <li><a href="#"><i class="fa fa-circle-o"></i> Consulta Horarios Clases </a></li>
+                <li><a href="{{path('docentes_consulta_horarios')}}"><i class="fa fa-circle-o"></i> Consulta Horarios Clases </a></li>
               {% endif %}
               {% if event.id_sg_opcion == ConsultaHorariosExamen %}
                 <li><a href="#"><i class="fa fa-circle-o"></i> Consulta Horarios Examen </a></li>
