--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/mensajes_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/mensajes_universidad.html.twig
@@ -20,7 +20,7 @@
             
             <div class="col-md-12">
               <div class="box-header with-border">
-                <h3 class="box-title">Mensajes (Tienes # mensajes nuevos)</h3>
+             {#   <h3 class="box-title">Mensajes (Tienes # mensajes nuevos)</h3>#}
                
             </div><!-- /.box-header -->
              <div class="box box-solid">
@@ -35,7 +35,7 @@
 					        <th> Asunto   </th>
 					        <th> Detalle </th>
                                                 <th style="text-align: center">Fecha de Envio</th>
-                                                <th style="text-align: center">Ver Mensajes</th>
+                                               {# <th style="text-align: center">Ver Mensajes</th>#}
 				        </tr>
 				        </thead>
 				        <tbody>
@@ -47,9 +47,9 @@
                                     <td>{{ Mensajes.asunto }}</td>
                                     <td>{{ Mensajes.mensaje }}</td>
                                     <td style="text-align: center">{{ Mensajes.fecha_registro }}</td>
-                                    <td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
+                                    {#<td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
                                     <i class="fa fa-envelope-o"></i>                                                           
-                                    </a></td>
+                                    </a></td>#}
                                 </tr>
                             {%endfor%}
                              
