--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_orden.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_orden.html.twig
@@ -26,7 +26,7 @@
                     <td align='left' valign='center'>
                         
                         <select  name='selconsulta'>
-                          <option value="cedula" > Cedula de Identicada</option>
+                          <option value="cedula" > Cedula de Identidad</option>
                           <option value="codigo"> Codigo del Estudiante </option>
                         </select >
                     </td>
