--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_legal_ordenpago.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_legal_ordenpago.html.twig
@@ -173,8 +173,17 @@
                                        var respuesta=jQuery.parseJSON(dataResponse);
                                        if (respuesta.codigo_error!=1)
                                        {
+                                            modelessActualizadOrden2= new $.flavr({
+                                                   modal   : true,
+                                                   content : respuesta.mensaje,
+                                                   buttons     : {
+                                                      primary : { text: 'Aceptar', 
+                                                      style: 'primary' }
+                                                   }
+                                                });
                                             
                                             $("#btnlegalorden").attr("disabled", false);
+
                                        }
                                        else
                                        {
