--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -6,7 +6,7 @@
   <!-- Logo -->
   <a href="#" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
-    <span class="logo-mini"><b>UG</b>-A</span>
+    <span class="logo-mini"><b>ARES</b></span>
     <!-- logo for regular state and mobile devices -->
     <span class="logo-lg"><b>Academic Relation Student</b> </span>
   </a>
