--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
@@ -21,8 +21,8 @@
     <table class="table table-striped table-bordered table-hover" id="dataTables-example" border="1">
         <thead>
             <tr>
-                <th class="text-center " style="vertical-align: middle" >Codigo</th>
-                <th style="text-align: center;vertical-align: middle">Estudiante</th>
+                <th class="text-center " style="vertical-align: middle;background-color: #337AB7;" >Codigo</th>
+                <th style="text-align: center;vertical-align: middle;background-color: #337AB7;">Estudiante</th>
             </tr>
 
         </thead>
