--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
@@ -176,7 +176,7 @@
                                      url:   jumpAction,
                                      data: obj_data,
                                      type:  'post',
-                                     async: true,
+                                     async: false,
                                      beforeSend: function () {
                                       modelessSetSolicitud = new $.flavr({
                                                              modal   : true,
