--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
@@ -5,11 +5,11 @@
     <script src="{{ asset('js/EnviarMensajes.js') }}"></script>
     <script src="{{ asset('js/ValidacionesNotificaciones.js') }}"></script>
 <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
-    <script type="text/javascript">
+    {#<script type="text/javascript">
   $(function () {
            TableAdvanced.init();
     });  
-</script>
+</script>#}
    
 <section class="content">
 
