--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -99,7 +99,7 @@
 <!-- fullCalendar 2.2.5 -->
   <script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/fullcalendar/fullcalendar.min.js') }}"></script>
-  <script src="{{ asset('theme/plugins/datatables/jquery.dataTables.min.js') }}"></script>
+ <script src="{{ asset('theme/plugins/datatables/jquery.dataTables.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/datatables/dataTables.bootstrap.min.js') }}"></script>
   <script src="{{ asset('js/growl/jquery.growl.js') }}"></script>
   <script src="{{ asset('theme/plugins/chartjs/Chart.min.js') }}"></script>
@@ -120,22 +120,26 @@
 
 {#  notificaciones   #}
   
-<script type="text/javascript" src="{{ asset('js_notificaciones/datatables/media/js/jquery.dataTables.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js_notificaciones/datatables/extensions/TableTools/js/dataTables.tableTools.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js_notificaciones/datatables/extensions/ColReorder/js/dataTables.colReorder.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js_notificaciones/datatables/extensions/Scroller/js/dataTables.scroller.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js_notificaciones/datatables/plugins/bootstrap/dataTables.bootstrap.js') }}"></script>
-<script src="{{ asset('Scripts_notificaciones/metronic.js') }}" type="text/javascript"></script>
-<script src="{{ asset('Scripts_notificaciones/layout.js') }}" type="text/javascript"></script>
-<script src="{{ asset('Scripts_notificaciones/quick-sidebar.js') }}" type="text/javascript"></script>
-<script src="{{ asset('Scripts_notificaciones/demo.js') }}" type="text/javascript"></script>
+{#<script src="{{ asset('js_notificaciones/datatables/media/js/jquery.dataTables.min.js') }}"></script>#}
+<script src="{{ asset('js_notificaciones/datatables/extensions/TableTools/js/dataTables.tableTools.min.js') }}"></script>
+{#<script src="{{ asset('js_notificaciones/datatables/extensions/ColReorder/js/dataTables.colReorder.min.js') }}"></script>
+<script src="{{ asset('js_notificaciones/datatables/extensions/Scroller/js/dataTables.scroller.min.js') }}"></script>
+<script src="{{ asset('js_notificaciones/datatables/plugins/bootstrap/dataTables.bootstrap.js') }}"></script>#}
+{#<script src="{{ asset('Scripts_notificaciones/metronic.js') }}"></script>
+<script src="{{ asset('Scripts_notificaciones/layout.js') }}"></script>
+<script src="{{ asset('Scripts_notificaciones/quick-sidebar.js') }}"></script>
+<script src="{{ asset('Scripts_notificaciones/demo.js') }}"></script>#}
 <script src="{{ asset('Scripts_notificaciones/table-advanced.js') }}"></script>
-<script src="{{ asset('Scripts_notificaciones/form-wizard.js') }}"></script>
-<script src="{{ asset('js_notificaciones/components-pickers.js') }}"></script>
+{#<script src="{{ asset('Scripts_notificaciones/form-wizard.js') }}"></script>
+<script src="{{ asset('js_notificaciones/components-pickers.js') }}"></script>#}
 {#  notificaciones   #}
 
 
-
+<script type="text/javascript">
+  $(function () {
+           TableAdvanced.init();          
+    });  
+</script>
 <script type="text/javascript">
   $(function () {
            
