--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -9,8 +9,11 @@
 <link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/iosOverlay.css') }}">
 <link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/prettify.css') }}">
 <link rel="icon" type="image/x-icon" href="{{ asset('images/menu/ug_logo.png') }}" />
+<link type="text/css" rel="stylesheet" href="{{ asset('theme/bootstrap/css/bootstrap.min.css') }}">
 
-<script src="{{ asset('js/script/jquery-1.10.2.min.js') }}"></script>
+
+<script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
+<script src="{{ asset('lib/bootstrap-strength.min.js') }}"></script> 
 <script src="{{ asset('js/flavr/flavr.js') }}"></script>
 <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
 <script src="{{ asset('js/growl/jquery.growl.js') }}"></script>
@@ -20,6 +23,7 @@
 <script src="{{ asset('js/lib/iOS-Overlay/js/modernizr-2.0.6.min.js') }}"></script>
 <script src="{{ asset('js/lib/jquery-spin/spin.min.js') }}"></script>
 <script src="{{ asset('js/sistemau.functions.js') }}"></script>
+
 
 <style type="text/css">
 
@@ -31,11 +35,11 @@
 .flavr-container .flavr-fixer .flavr-outer .flavr-content {font-size: 12px !important;}
 .flavr-container .flavr-fixer .flavr-outer {min-width: 500px !important;}
 .flavr-form{margin: 20px 0px;text-align: left;}
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message {line-height: 2.0;}
+.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message {line-height: 2.0; text-shadow: none;}
 .flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-icon,
 .flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-title {text-align: center;}
 .cambioContrasenia{line-height: 1.2;}
-.flavr-container .flavr-fixer {margin: 5% auto 0px !important;}
+.flavr-container .flavr-fixer {margin: 1% auto 0px !important;}
 .flavr-container .flavr-overlay {background: #d2d6de !important;}
 
 .flavr-container .flavr-fixer .flavr-outer .flavr-toolbar{background: #fff !important;}
@@ -56,9 +60,10 @@
 
 <script type="text/javascript">
 
-  $(document).ready(function(){    
-    setTimeout('login();',1000);
-  });
+  $(document).ready(function ($) {
+  setTimeout('login();',1000);
+});
+
 
 var btn_login = 0;
 
@@ -67,23 +72,17 @@ function recordar_pass () {
     $("#iniciar").show();
     $("#recordar_link").hide();
     $("#btn_iniciar").hide();
-    $("#enviar_mail").show();
+
 }
 
 function iniciar_sesion () {
   $("#password").show();
   $("#btn_iniciar").show();
   $("#iniciar").hide();
-  $("#enviar_mail").hide();
+
   $("#recordar_link").show();
 }
 
-function enviar_mail (user) {
-
- $.post('{{path('titulacion_sis_academico_mail')}}', {user: user}, function(data) {
-   //alert(data);
- });
-}
 
 function validaContrasenia(idCaja){
   expr = /(?=^[A-Z].{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
@@ -106,8 +105,12 @@ function validaContrasenia(idCaja){
   return band;
 }
 
-function login(stringvalue){
+  function cargarCaptcha(){
+    $('#captcha').attr("src",'{{path('titulacion_sis_academico_get_captcha')}}?rnd=' + Math.random());
+  }
 
+function login(stringvalue){
+   
     btn_login = btn_login +1*1;
     if (btn_login == 1) {
 
@@ -121,7 +124,7 @@ function login(stringvalue){
           '<p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan al menos tres de las siguientes caracteristicas:<br /></p>' +
           '<ul><li>  Letras abecedario Mayúsculas (A-Z).</li>' +
           '<li>  Letras abecedario minúsculas (a-z).</li>' +
-          '<li>  Números (0-9) o Caracteres especiales ($, %, *, &).</li></ul><br/></div>' ;  
+          '<li>  Números (0-9) o Caracteres especiales.</li></ul><br/></div>' ;  
           var html =
           '<div class="flavr-message"> Usuario:</div>'+
           '<div class="form-row">' +
@@ -134,19 +137,28 @@ function login(stringvalue){
           'placeholder="Contraseña"  required /> <p class="help-block"></p>' +
           '</div>' +
           '<div class="flavr-message"> Ingrese su nueva Contraseña:</div>'+
-          '<div class="form-row">' +
-          '<input id="password1" type="password" name="password1" onchange="return validaContrasenia(this.id)" ' +
-          'placeholder="Nueva Contraseña"  required /> <p class="help-block"></p>' +
+          '<div class="form-row" >' +
+          '<input id="password1" type="password" class="demo-2" onchange="return validaContrasenia(this.id)" ' +
+          'placeholder="Nueva Contraseña"  required /> ' +
           '</div>' +
           '<div class="flavr-message"> Confirme su nueva Contraseña:</div>'+
           '<div class="form-row">' +
           '<input id="password2" type="password" name="password2" ' +
           'placeholder="Confirme Contraseña" required /> <p class="help-block"></p>' +
-          '</div>' +
-          '<div class="form-row">' +
-          '</div>';
+          '</div>'  ;
           
-          html = htmlCabecera + html; 
+          var captcha3 =
+          '<div class="flavr-message">' +
+          '<img src="{{path('admin_academico_get_captcha')}}" alt="" id="captcha" />' +
+          '<img src="{{ asset('images/')}}refresh.jpg" width="25" alt="" id="refresh" onclick="cargarCaptcha();" />'+
+          '</div>'+
+          '<div class="form-row">' +
+          '<input name="code" type="text" id="code" placeholder="Digite el Codigo" required> <p class="help-block"></p>' +
+          '</div>';
+
+
+          html = htmlCabecera + html + captcha3; 
+       
 
     new $.flavr({
         title       : 'Restablecer Contraseña',
@@ -194,7 +206,7 @@ function login(stringvalue){
                         var modelessCambioPassword;
                         $.ajax({
                           url:   '{{path('admin_academico_ingreso_nuevo_pass')}}',
-                          data: {'user': $("#usuario").val(),'pass': $("#password").val(),'pass1': $("#password1").val(),'pass2':$("#password2").val()},
+                          data: {'user': $("#usuario").val(),'pass': $("#password").val(),'pass1': $("#password1").val(),'code':$("#code").val()},
                           type:  'post',
 
                           beforeSend: function () {
@@ -212,17 +224,26 @@ function login(stringvalue){
                           success:  function (dataResponse) {
                             modelessCambioPassword.close();
                             //alert(dataResponse);
-                          
-                            var codigo = JSON.parse(dataResponse).Codigo[0];
-                            var mensaje = JSON.parse(dataResponse).Mensaje[0];
 
-                            if (codigo == "1") {
-                              mensaje_cisc( "notice", "Contraseña cambiada correctamente");
-                              location.href = '{{path('titulacion_sis_academico_ingresar')}}';
-                            }
-                            else{
-                              mensaje_cisc( "error", mensaje);
-                            }
+                             var error = JSON.parse(dataResponse).valError;
+                               if(error == "1"){
+                                   mensaje_cisc( "error", "El código de verificación es incorrecto.");
+
+                               }else{
+                                  var codigo = JSON.parse(dataResponse).Codigo[0];
+                                  var mensaje = JSON.parse(dataResponse).Mensaje[0];
+
+                                  if (codigo == "1") {
+                                    mensaje_cisc( "notice", "Contraseña cambiada correctamente");
+
+                                  }
+                                  else{
+                                    mensaje_cisc( "error", mensaje);
+                                  }
+
+                               }
+                          
+                           
                           },
                           dataType:'html'
                           });
@@ -235,7 +256,10 @@ function login(stringvalue){
 
     }
     });
+ $('.demo-2').bootstrapStrength({slimBar:true});
+
     }
+
 }
 
 </script>
