--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -27,7 +27,9 @@
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/dist/css/AdminLTE.min.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/dist/css/skins/_all-skins.min.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('theme/main.css') }}">
+
     <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
+    
   <!-- FIN - theme -->
 
   </head>
@@ -77,6 +79,7 @@
   <script src="{{ asset('theme/dist/js/demo.js') }}"></script>
   <!-- FIN - theme -->
     
+  <script src="{{ asset('lib/bootstrap-strength.min.js') }}"></script> 
   <script src="{{ asset('js/script/jquery-ui.js') }}"></script>
   <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
   <script src="{{ asset('js/sistemau.functions.js') }}"></script>
@@ -94,7 +97,6 @@
   <script src="{{ asset('theme/plugins/input-mask/jquery.inputmask.js') }}"></script>
   <script src="{{ asset('theme/plugins/input-mask/jquery.inputmask.date.extensions.js') }}"></script>
   <script src="{{ asset('theme/plugins/input-mask/jquery.inputmask.extensions.js') }}"></script>
-  <script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/daterangepicker/daterangepicker.js') }}"></script>
   <script src="{{ asset('theme/plugins/colorpicker/bootstrap-colorpicker.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/timepicker/bootstrap-timepicker.min.js') }}"></script>
