--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -122,7 +122,7 @@
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-left">
-                {# <a href="{{path('admin_academico_cambio_pass')}}" class="btn btn-default btn-flat">Cambio Contraseña</a> #}
+                <a href="{{path('admin_academico_cambio_pass_int')}}" class="btn btn-default btn-flat">Cambio Contraseña</a>
               </div>
               <div class="pull-right">
                 <a href="{{path('titulacion_sis_academico_logout')}}" class="btn btn-default btn-flat">Salir</a>
