--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
@@ -1,101 +1,75 @@
 {% extends 'TitulacionSisAcademicoBundle:Home:index.html.twig' %}
 {% block home %}  
 
-<link type="text/css" rel="stylesheet" href="{{ asset('css/styles/animate.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('css/styles/all.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('css/flavr/flavr.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('css/growl/jquery.growl.css') }}" >
 
-<link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/iosOverlay.css') }}">
-<link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/prettify.css') }}">
-<link rel="icon" type="image/x-icon" href="{{ asset('images/menu/ug_logo.png') }}" />
 
-<script src="{{ asset('js/script/jquery-1.10.2.min.js') }}"></script>
-<script src="{{ asset('js/flavr/flavr.js') }}"></script>
-<script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
-<script src="{{ asset('js/growl/jquery.growl.js') }}"></script>
-<script src="{{ asset('js/mensajes.js') }}"></script>
+  <!-- Main content -->
+  <section class="content">
+    <div class="col-md-3">&nbsp;</div>
+    <div class="col-md-6">
+      <!-- general form elements -->
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">Cambio Contraseña</h3>
+        </div>
+        <!-- /.box-header -->
+        <!-- form start -->
+        <form role="form">
+          <div class="box-body">
 
-<script src="{{ asset('js/lib/iOS-Overlay/js/iosOverlay.js') }}"></script>
-<script src="{{ asset('js/lib/iOS-Overlay/js/modernizr-2.0.6.min.js') }}"></script>
-<script src="{{ asset('js/lib/jquery-spin/spin.min.js') }}"></script>
-<script src="{{ asset('js/sistemau.functions.js') }}"></script>
+            <div class="cambioContrasenia">
+              <p>Estimado Usuario, la clave ingresada debe considerar los siguientes requisitos.<br />
+              </p>
+              <p>&nbsp;&nbsp;-  El primer carácter debe ser alfanumérico en mayúsculas</p>
+              <p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan al menos tres de las siguientes caracteristicas:<br />
+              </p>
+              <ul>
+                <li>  Letras abecedario Mayúsculas (A-Z).</li>
+                <li>  Letras abecedario minúsculas (a-z).</li>
+                <li>  Números (0-9) o Caracteres especiales.</li>
+              </ul>
+              <br/>
+            </div>
 
-<style type="text/css">
+            <div class="form-group">
+              <label for="InputPassword">Contraseña Actual</label>
+              <input type="password" class="form-control" id="password" placeholder="Contraseña" required />
+            </div>
+            <div class="form-group">
+              <label for="InputPassword1">Nueva Contraseña</label>
+              <input type="password" class="form-control demo-2" id="password1" placeholder="Nueva Contraseña" onchange="return validaContrasenia(this.id)" required />
+            </div>
+            <div class="form-group">
+              <label for="InputPassword1">Confirme su nueva Contraseña</label>
+              <input type="password" class="form-control" id="password2" placeholder="Confirme Contraseña" onchange="return validaContrasenia(this.id)" required />
+            </div> 
+          </div>
+          <!-- /.box-body -->
 
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message form input {
-  width: 50% !important;
-  float: right !important;
-  margin: -50px 1px !important;
-}
-.flavr-container .flavr-fixer .flavr-outer .flavr-content {font-size: 12px !important;}
-.flavr-container .flavr-fixer .flavr-outer {min-width: 500px !important;}
-.flavr-form{margin: 20px 0px;text-align: left;}
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message {line-height: 2.0;}
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-icon,
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-title {text-align: center;}
-.cambioContrasenia{line-height: 1.2;}
-.flavr-container .flavr-fixer {margin: 5% auto 0px !important;}
-.flavr-container .flavr-overlay {background: #d2d6de !important;}
+          <div class="box-footer">
+            <a href="#" onclick="cambiarContrasenia();"  class="btn btn-primary">Aceptar</a>
+          </div>
+        </form>
+      </div>
+      <!-- /.box -->
+    </div>
+    <div class="col-md-3">&nbsp;</div>
+  </section>
+  <!-- /.content -->
 
-.flavr-container .flavr-fixer .flavr-outer .flavr-toolbar{background: #fff !important;}
-.flavr-container .flavr-fixer .flavr-outer .flavr-content {
-  border-top: 5px solid #005595 !important;
-  background: #fff !important;
-  color: #000 !important;
-}
-.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message form input { 
-  border: 1.5px solid #d2d6de !important; 
-  background: #FAFFBD !important;
-}
-.flavr-container .flavr-overlay {background: #d2d6de !important;}
-.flavr-container .flavr-fixer .flavr-outer .flavr-toolbar.inline .flavr-button { font-weight: bold; }
-.flavr-container .flavr-fixer .flavr-outer .flavr-toolbar .flavr-button.danger { background-color: #F44A56; }
-
-</style>
 
 <script type="text/javascript">
 
-  $(document).ready(function(){    
-    setTimeout('login();',1000);
-  });
+$(document).ready(function ($) {
+ $('.demo-2').bootstrapStrength({slimBar:true});
+});
 
-var btn_login = 0;
-
-function recordar_pass () {
-    $("#password").hide();
-    $("#iniciar").show();
-    $("#recordar_link").hide();
-    $("#btn_iniciar").hide();
-    $("#enviar_mail").show();
-}
-
-function iniciar_sesion () {
-  $("#password").show();
-  $("#btn_iniciar").show();
-  $("#iniciar").hide();
-  $("#enviar_mail").hide();
-  $("#recordar_link").show();
-}
-
-function enviar_mail (user) {
-
- $.post('{{path('titulacion_sis_academico_mail')}}', {user: user}, function(data) {
-   //alert(data);
- });
-}
 
 function validaContrasenia(idCaja){
-  expr = /(?=^[A-Z].{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
-  
+  expr = /(?=^[A-Z].{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
   band = true;
-
   stringvalue = $("#"+idCaja).val();
-
-  //alert(stringvalue);
-
   if(stringvalue != ""){
-  
     if (!expr.test(stringvalue))
     {
        mensaje_cisc( "error", "Contraseña invalida.");
@@ -106,136 +80,72 @@ function validaContrasenia(idCaja){
   return band;
 }
 
-function login(stringvalue){
+function cambiarContrasenia(){
+  var bandValid = 0;
+    var msgError = "";
 
-    btn_login = btn_login +1*1;
-    if (btn_login == 1) {
+    $("#password").val($.trim($("#password").val()));
+    $("#password1").val($.trim($("#password1").val()));
+    $("#password2").val($.trim($("#password2").val()));
 
 
-     $('.login-are').removeAttr('click');
+      if($("#password").val() == $("#password1").val())
+        {
+          msgError = "Su nueva contraseña debe ser diferente a la actual.";
+          $("#password1").val('') ;
+          bandValid = 1;
+        }else{
+          if($("#password1").val() != $("#password2").val())
+            {
+              msgError = "Las contraseñas no coinciden.";
+              $("#password2").val('') ;
+              bandValid = 1;
+            }
+       }
+    
 
-          var htmlCabecera = 
-          '<div class="cambioContrasenia">' +
-          '<p>Estimado Usuario, la clave ingresada debe considerar los siguientes requisitos.<br /></p>' +
-          '<p>&nbsp;&nbsp;-  El primer carácter debe ser alfanumérico en mayúsculas</p>' +
-          '<p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan al menos tres de las siguientes caracteristicas:<br /></p>' +
-          '<ul><li>  Letras abecedario Mayúsculas (A-Z).</li>' +
-          '<li>  Letras abecedario minúsculas (a-z).</li>' +
-          '<li>  Números (0-9) o Caracteres especiales ($, %, *, &).</li></ul><br/></div>' ;  
-          var html =
-          '<div class="flavr-message"> Usuario:</div>'+
-          '<div class="form-row">' +
-          '<input id="usuario" type="text" name="usuario" maxlength="10"' +
-          'placeholder="Usuario"  required /> <p class="help-block"></p>' +
-          '</div>' +
-          '<div class="flavr-message"> Ingrese Contraseña:</div>'+
-          '<div class="form-row">' +
-          '<input id="password" type="password" name="password" ' +
-          'placeholder="Contraseña"  required /> <p class="help-block"></p>' +
-          '</div>' +
-          '<div class="flavr-message"> Ingrese su nueva Contraseña:</div>'+
-          '<div class="form-row">' +
-          '<input id="password1" type="password" name="password1" onchange="return validaContrasenia(this.id)" ' +
-          'placeholder="Nueva Contraseña"  required /> <p class="help-block"></p>' +
-          '</div>' +
-          '<div class="flavr-message"> Confirme su nueva Contraseña:</div>'+
-          '<div class="form-row">' +
-          '<input id="password2" type="password" name="password2" ' +
-          'placeholder="Confirme Contraseña" required /> <p class="help-block"></p>' +
-          '</div>' +
-          '<div class="form-row">' +
-          '</div>';
-          
-          html = htmlCabecera + html; 
-
-    new $.flavr({
-        title       : 'Cambio Contraseña',
-        iconPath    : '{{ asset('images/menu/')}}',
-        icon        : 'ug_logo.png',
-        dialog      : 'form',
-        form        : {  content: html, method: 'get'},
-        buttons : {
-        submit  : { text: 'Aceptar', style: 'primary', addClass: 'submit-btn', id: 'btn_iniciar',
-                    action: function( $container, $second, $third ){
-                      var bandValid = 0;
-                      var msgError = "";
-
-                      $("#usuario").val($.trim($("#usuario").val()));
-                      $("#password").val($.trim($("#password").val()));
-                      $("#password1").val($.trim($("#password1").val()));
-                      $("#password2").val($.trim($("#password2").val()));
-
-                      if ($("#usuario").val() == '' || $("#password").val() == ''|| $("#password1").val() == ''|| $("#password2").val() == '') {
-                         msgError = "Todos los campos deben estar llenos.";
-                         bandValid = 1;
-                      }else{
-
-                        if($("#password").val() == $("#password1").val())
-                          {
-                            msgError = "Su nueva contraseña debe ser diferente a la actual.";
-                            $("#password1").val('') ;
-                            bandValid = 1;
-                          }else{
-                            if($("#password1").val() != $("#password2").val())
-                              {
-                                msgError = "Las contraseñas no coinciden.";
-                                $("#password2").val('') ;
-                                bandValid = 1;
-                              }
-                         }
-                      }
-
-                      if(bandValid == 1){
-
-                          mensaje_cisc( "error", msgError);
-                          this.wobble();
-                          
-                      }else{
-                        var modelessCambioPassword;
-                        $.ajax({
-                          url:   '{{path('admin_academico_ingreso_nuevo_pass')}}',
-                          data: {'user': $("#usuario").val(),'pass': $("#password").val(),'pass1': $("#password1").val(),'pass2':$("#password2").val()},
-                          type:  'post',
-
-                          beforeSend: function () {
-                            modelessCambioPassword = new $.flavr({
-                              modal   : true,
-                              content : '<i class="fa fa-refresh fa-spin"></i> &nbsp;<b>Cargando...</b>',
-                              buttons     : {}
-                              });
-                          },
-                          error:function(){
-                            modelessCambioPassword.close();
-                              btn_login = 0;                          
-                              mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
-                          },
-                          success:  function (dataResponse) {
-                            modelessCambioPassword.close();
-                            //alert(dataResponse);
-                          
-                            var codigo = JSON.parse(dataResponse).Codigo[0];
-                            var mensaje = JSON.parse(dataResponse).Mensaje[0];
-
-                            if (codigo == "1") {
-                              mensaje_cisc( "notice", "Contraseña cambiada correctamente");
-                              location.href = '{{path('titulacion_sis_academico_ingresar')}}';
-                            }
-                            else{
-                              mensaje_cisc( "error", mensaje);
-                            }
-                          },
-                          dataType:'html'
-                          });
-                      }
-                        return false;
-                    }
-        
+    if(bandValid == 1){
+        mensaje_cisc( "error", msgError);
+    }else{
+      var modelessCambioPassword;
+      $.ajax({
+        url:   '{{path('admin_academico_ingreso_nuevo_int_pass')}}',
+        data: {'pass': $("#password").val(),'pass1': $("#password1").val()},
+        type:  'post',
+        beforeSend: function () {
+          modelessCambioPassword = new $.flavr({
+            modal   : true,
+            content : '<i class="fa fa-refresh fa-spin"/> &nbsp;<b>Cargando...</b>',
+            buttons     : {}
+            });
         },
-        danger: { text: 'Salir',id:'salir', style: 'danger', action: function(){ this.animate('fadeOutDown'); location.href = '{{path('titulacion_sis_academico_ingresar')}}'; return false }}
-    }
-    });
+        error:function(){
+          modelessCambioPassword.close();                       
+            mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
+        },
+        success:  function (dataResponse) {
+          modelessCambioPassword.close();
+           var codigo = JSON.parse(dataResponse).Codigo[0];
+           var mensaje = JSON.parse(dataResponse).Mensaje[0];
+
+            if (codigo == "1") {
+               mensaje_cisc( "notice", "Contraseña cambiada correctamente");
+               $("#password2").val('');
+               $("#password1").val('');
+               $("#password").val('');
+            }
+            else{
+                mensaje_cisc( "error", mensaje);
+                $("#password").val('');
+            }
+          
+        },
+        dataType:'html'
+        });
     }
 }
 
+
 </script>
+
 {% endblock %}
